Add local pathfinding repo and improve python infra (#130)
* Fix pydocstyle installation

* Downgrade pip to fix build warning

* Add local pathfinding repository

* Remove duplicate extensions

* Update linters run by github actions

* Add github actions extension

* Update github actions ament linters again

* Update ament linters tasks

* Add black python formatter

* Add black formatter extension

* Add back rulers in c/c++ files

* Configure flake8 extension

* Update dev container starting image

* Move downgrading setuptools to base img

* Update dev container from img tag

* Specify rosdistro for rosdep

* Add clang-tidy input to test_definitions workflow

* Rename ros_msgs repo to custom_interfaces

* Add and configure isort extension (py formatter)

* Remove pep257 linter

* Copy flake8 configuration from ament lint

* Configure timezone in base img

* Customize ROS log format

* Update dev container from img tag

* Add custom-interfaces input to test_definitions.yml

* Set custom-interfaces to false in workspace

* Fix condition to clone custom_interfaces

* Improve custom-interfaces documentation

* Switch custom_interfaces branch

--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -6,6 +6,12 @@ on:
   workflow_call:
     # Inputs and secrets documented in the caller workflows
     inputs:
+      clang-tidy:
+        required: true
+        type: boolean
+      custom-interfaces:
+        required: true
+        type: boolean
       disable-vcs:
         required: true
         type: string
@@ -35,6 +41,14 @@ jobs:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
 
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
+            path: src/custom_interfaces
+
       - name: Test
         uses: ./.github/actions/test/
         env:
@@ -46,7 +60,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
+          # ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
+          linter: [lint_cmake, flake8, xmllint]
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -59,6 +74,14 @@ jobs:
         with:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
+
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
+            path: src/custom_interfaces
 
       - name: Run linter
         uses: ./.github/actions/ament-lint/
@@ -68,6 +91,7 @@ jobs:
 
   clang-tidy:
     runs-on: ubuntu-latest
+    if: inputs.clang-tidy
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -80,6 +104,14 @@ jobs:
         with:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
+
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
+            path: src/custom_interfaces
 
       - name: Run linter
         uses: ./.github/actions/clang-tidy/
