--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,15 +54,15 @@
 				"cschlosser.doxdocgen",
 				"DavidAnson.vscode-markdownlint",
 				"eamodio.gitlens",
+				"github.vscode-github-actions",
 				"jeff-hykin.better-cpp-syntax",
 				"KevinRose.vsc-python-indent",
 				"llvm-vs-code-extensions.vscode-clangd",
 				"mongodb.mongodb-vscode",
-				"ms-python.flake8",
-				"ms-python.python",
+				"ms-python.black-formatter",
+				"ms-python.isort",
 				"ms-vsliveshare.vsliveshare",
 				"njpwerner.autodocstring",
-				"redhat.vscode-yaml",
 				"streetsidesoftware.code-spell-checker",
 				"vscode-icons-team.vscode-icons",
 				"zxh404.vscode-proto3"
