--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
     # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
     uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@user/dfriend01/add_lang_ci_args
     with:
+      # Enable to true when running CI on ROS packages
+      ros-ci: true
       repository: ${{ github.event.repository.name }}
       # clang-tidy take a long time to run, so disable in repositories that don't need it
       clang-tidy: true
