Combine apt install sections

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,22 +1,12 @@
 FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:setup-local-pathfinding3
 
-# # Uncomment this section to install the apt packages used in the ROS 2 tutorials
-# ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update \
-#     && apt-get install -y --no-install-recommends \
-#         # Your package list here
-#         ros-humble-turtlesim \
-#     # Clean up
-#     && apt-get autoremove -y \
-#     && apt-get clean -y \
-#     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
-# ENV DEBIAN_FRONTEND=
-
 # # Uncomment this section to install additional apt packages
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
 #     && apt-get install -y --no-install-recommends \
 #         # Your package list here
+#         # Uncomment the line below to install the apt package used in the ROS 2 tutorials
+#         # ros-humble-turtlesim \
 #     # Clean up
 #     && apt-get autoremove -y \
 #     && apt-get clean -y \
