--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -1,30 +1,41 @@
 name: Test Definitions
 
 on:
-  # Called by other workflows, refer to
-  # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
+  # Called by other workflows: https://docs.github.com/en/actions/using-workflows/reusing-workflows#creating-a-reusable-workflow
   workflow_call:
-    # Inputs and secrets documented in the caller workflows
     inputs:
-      ros-ci:
-        required: true
-        type: boolean
-      clang-tidy:
-        required: true
-        type: boolean
+      # The repository name: ${{ github.event.repository.name }}
       repository:
         required: true
         type: string
+      # If true, runs the ROS tests and linters
+      # Set to true for ROS packages
+      ros-ci:
+        required: true
+        type: boolean
+      # If true, runs clang-tidy
+      # Takes a long time, so only set to true for C++ repositories
+      clang-tidy:
+        required: true
+        type: boolean
+      # If true, rebuilds our docs site https://ubcsailbot.github.io/docs/
+      # Set to true if the docs site contains a snippet of a file in the repository
       rebuild-docs:
         required: true
         type: boolean
+      # If true, runs the Markdown linters
+      # True by default, disable only if there will never be Markdown files in the repository
       markdown-ci:
         required: false
         default: true
         type: boolean
     secrets:
+      # A GitHub token with access to our docs site https://ubcsailbot.github.io/docs/
+      # If rebuild-docs is true:
+      # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
+      # 2. Set to ${{ secrets.PAT_TOKEN }}
       gh-token:
-        required: true
+        required: false
 
 jobs:
   colcon-test:
