--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,8 +30,8 @@ jobs:
       ros-ci: true
       clang-tidy: true
       rebuild-docs: true
+    # If rebuild-docs is true:
+    # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
+    # 2. Uncomment the 2 lines below
     secrets:
-      # If rebuild-docs is true:
-      # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
-      # 2. Uncomment the line below
       gh-token: ${{ secrets.PAT_TOKEN }}
