--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -171,7 +171,7 @@ jobs:
   # Rebuilds our docs site https://ubcsailbot.github.io/docs/
   rebuild-docs:
     runs-on: ubuntu-latest
-    if: inputs.rebuild-docs
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && inputs.rebuild-docs
     steps:
     - name: Dispatch Docs Publish workflow
       # https://github.com/orgs/community/discussions/26323#discussioncomment-5600001
