--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,9 +29,9 @@ jobs:
       repository: ${{ github.event.repository.name }}
       ros-ci: true
       clang-tidy: true
-      rebuild-docs: false
+      rebuild-docs: true
     # If rebuild-docs is true:
     # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
     # 2. Uncomment the 2 lines below
-    # secrets:
-    #   gh-token: ${{ secrets.PAT_TOKEN }}
+    secrets:
+      gh-token: ${{ secrets.PAT_TOKEN }}
