Reusable workflow optimizations with arguments and linting actions (#129)
* Add more arguments to test definitions and apply them to job steps

* Remove matrix

* Revert to matrix implementation and split linting up into multiple jobs

* Remove languages as required inputs to workflow

* Add quotes around linter names

* Tweak if statement

* New multiline if statement syntax

* Stuff

* Separated linters into their own jobs

* Change if statements

* Debugging setup script

* Dubugging

* Debugging

* Check for valid files before linting

* Stop clang-tidy if no files are found

* Tweak linting functions

* Revert to old ament-lint job implementation and remove language inputs

* Revert test.yml

* Remove uses-cpp argument from clang-tidy

* Change action ref to this branch

* Refactor run.sh for ament-lint action to condense logic

* Change refs

* Corrected refs

* Corrected refs

* Remove docs from valid linting directories

* Remove debugging statements from setup script

* Reduce arguments in workflow and substituted redundant arguments

* Remove check for files in clang-tidy

* Remove pep257 from linters

* Add comments to bash functions

* Remove custom interfaces argument

* Remove disable-vcs input

* Change workflow branch

* Change workflow branch

* Remove disable-vcs

* Add ros-ci argument

* Change order of cloning src repos

* Revert

* Comment out custom interfaces

* Change vcs to main

* Revert

* Fix indentation

* Add debug step

* Fix if condition

* Remove debug step

* Call locally defined workflow

* Revamp reusable workflows documentation

* Test running rebuild docs

* Update gh-token documentation

* Test not defining gh-token

* Revert tests

* Reorganize ament-lint  to match others

* Testing when DISABLE_VCS should evaluate to true

* Revert test

---------

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -1,126 +1,144 @@
 name: Test Definitions
 
 on:
-  # Called by other workflows, refer to
-  # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
+  # Called by other workflows: https://docs.github.com/en/actions/using-workflows/reusing-workflows#creating-a-reusable-workflow
   workflow_call:
-    # Inputs and secrets documented in the caller workflows
     inputs:
-      clang-tidy:
-        required: true
-        type: boolean
-      custom-interfaces:
-        required: true
-        type: boolean
-      disable-vcs:
-        required: true
-        type: string
+      # The repository name: ${{ github.event.repository.name }}
       repository:
         required: true
         type: string
+      # If true, runs the ROS tests and linters
+      # Set to true for ROS packages
+      ros-ci:
+        required: true
+        type: boolean
+      # If true, runs clang-tidy
+      # Takes a long time, so only set to true for C++ repositories
+      clang-tidy:
+        required: true
+        type: boolean
+      # If true, rebuilds our docs site https://ubcsailbot.github.io/docs/
+      # Set to true if the docs site contains a snippet of a file in the repository
       rebuild-docs:
         required: true
         type: boolean
+      # If true, runs the Markdown linters
+      # True by default, disable only if there will never be Markdown files in the repository
+      markdown-ci:
+        required: false
+        default: true
+        type: boolean
     secrets:
+      # A GitHub token with access to our docs site https://ubcsailbot.github.io/docs/
+      # If rebuild-docs is true:
+      # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
+      # 2. Set to ${{ secrets.PAT_TOKEN }}
       gh-token:
-        required: true
+        required: false
 
 jobs:
   colcon-test:
     runs-on: ubuntu-latest
+    if: ${{ inputs.ros-ci }}
     steps:
-      - name: Checkout workspace
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/sailbot_workspace
+    - name: Checkout workspace
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/sailbot_workspace
+          ref: user/dfriend01/add_lang_ci_args
 
-      - name: Checkout ROS package
-        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/${{ inputs.repository }}
-            path: src/${{ inputs.repository }}
+    - name: Checkout ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/${{ inputs.repository }}
+          path: src/${{ inputs.repository }}
 
-      - name: Checkout custom_interfaces ROS package
-        if: ${{ inputs.custom-interfaces}}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/custom_interfaces
-            ref: user/colinli02/custom_messages
-            path: src/custom_interfaces
+    - name: Checkout custom_interfaces ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/custom_interfaces
+          ref: user/colinli02/custom_messages
+          path: src/custom_interfaces
 
-      - name: Test
-        uses: ./.github/actions/test/
-        env:
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
+    - name: Test
+      uses: ./.github/actions/test/
+      env:
+        DISABLE_VCS: ${{ inputs.repository != github.event.repository.name }}
 
   ament-lint:
-    name: ament_${{ matrix.linter }}
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
           # ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
           linter: [lint_cmake, flake8, xmllint]
+    name: ament_${{ matrix.linter }}
+    runs-on: ubuntu-latest
+    if: ${{ inputs.ros-ci }}
     steps:
-      - name: Checkout workspace
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/sailbot_workspace
+    - name: Checkout workspace
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/sailbot_workspace
+          ref: user/dfriend01/add_lang_ci_args
 
-      - name: Checkout ROS package
-        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/${{ inputs.repository }}
-            path: src/${{ inputs.repository }}
+    - name: Checkout ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/${{ inputs.repository }}
+          path: src/${{ inputs.repository }}
 
-      - name: Checkout custom_interfaces ROS package
-        if: ${{ inputs.custom-interfaces}}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/custom_interfaces
-            ref: user/colinli02/custom_messages
-            path: src/custom_interfaces
+    - name: Checkout custom_interfaces ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/custom_interfaces
+          ref: user/colinli02/custom_messages
+          path: src/custom_interfaces
 
-      - name: Run linter
-        uses: ./.github/actions/ament-lint/
-        env:
-          LINTER: ${{ matrix.linter }}
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
+    - name: Run linter
+      uses: ./.github/actions/ament-lint/
+      env:
+        LINTER: ${{ matrix.linter }}
+        DISABLE_VCS: ${{ inputs.repository != github.event.repository.name }}
 
   clang-tidy:
     runs-on: ubuntu-latest
     if: inputs.clang-tidy
     steps:
-      - name: Checkout workspace
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/sailbot_workspace
+    - name: Checkout workspace
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/sailbot_workspace
+          ref: user/dfriend01/add_lang_ci_args
 
-      - name: Checkout ROS package
-        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/${{ inputs.repository }}
-            path: src/${{ inputs.repository }}
+    - name: Checkout ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/${{ inputs.repository }}
+          path: src/${{ inputs.repository }}
 
-      - name: Checkout custom_interfaces ROS package
-        if: ${{ inputs.custom-interfaces}}
-        uses: actions/checkout@v3
-        with:
-            repository: UBCSailbot/custom_interfaces
-            ref: user/colinli02/custom_messages
-            path: src/custom_interfaces
+    - name: Checkout custom_interfaces ROS package
+      if: ${{ inputs.repository != github.event.repository.name }}
+      uses: actions/checkout@v3
+      with:
+          repository: UBCSailbot/custom_interfaces
+          ref: user/colinli02/custom_messages
+          path: src/custom_interfaces
 
-      - name: Run linter
-        uses: ./.github/actions/clang-tidy/
-        env:
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
+    - name: Run linter
+      uses: ./.github/actions/clang-tidy/
+      env:
+        DISABLE_VCS: ${{ inputs.repository != github.event.repository.name }}
 
   # https://github.com/nosborn/github-action-markdown-cli
   markdownlint:
     runs-on: ubuntu-latest
+    if: ${{ inputs.markdown-ci }}
     steps:
     - name: Check out code
       uses: actions/checkout@v3
@@ -137,6 +155,7 @@ jobs:
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
   markdown-link-check:
     runs-on: ubuntu-latest
+    if: ${{ inputs.markdown-ci }}
     steps:
     - name: Check out code
       uses: actions/checkout@v3
