--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,25 +20,18 @@ concurrency:
 jobs:
   # CI for all UBCSailbot repositories defined in one place
   # https://github.com/UBCSailbot/sailbot_workspace/blob/main/.github/workflows/test_definitions.yml
+  # Runs another workflow: https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
   test-definitions:
-    # Runs another workflow, refer to
-    # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
-    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@user/patrick-5546/setup-local-pathfinding
+    # sailbot_workspace: use locally-defined file
+    # other repositories: set to UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@<release>
+    uses: ./.github/workflows/test_definitions.yml
     with:
       repository: ${{ github.event.repository.name }}
-      # clang-tidy take a long time to run, so disable in repositories that don't need it
+      ros-ci: true
       clang-tidy: true
-      # Set to false in sailbot_workspace (cloned using VCS) and custom_interfaces
-      # Else if the repository uses the msgs or srvs defined in custom_interfaces, set to true
-      custom-interfaces: false
-      # VCS is used to clone all subteam repositories, so set to
-      # true in subteam repositories and
-      # false in sailbot_workspace
-      disable-vcs: false
-      # Rebuilds our docs site https://ubcsailbot.github.io/docs/
-      # If the docs contains a snippet of a file in this repository, set to true
       rebuild-docs: true
-    # https://docs.github.com/en/actions/using-workflows/reusing-workflows#using-inputs-and-secrets-in-a-reusable-workflow
+    # If rebuild-docs is true:
+    # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
+    # 2. Uncomment the 2 lines below
     secrets:
-      # The repository secret `PAT_TOKEN` needs to exist, copy from Bitwarden
       gh-token: ${{ secrets.PAT_TOKEN }}
