--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -55,7 +55,7 @@ jobs:
           path: src/${{ inputs.repository }}
 
     - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' }}
+      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
       uses: actions/checkout@v3
       with:
           repository: UBCSailbot/custom_interfaces
@@ -89,7 +89,7 @@ jobs:
           path: src/${{ inputs.repository }}
 
     - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' }}
+      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
       uses: actions/checkout@v3
       with:
           repository: UBCSailbot/custom_interfaces
@@ -118,7 +118,7 @@ jobs:
           path: src/${{ inputs.repository }}
 
     - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' }}
+      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
       uses: actions/checkout@v3
       with:
           repository: UBCSailbot/custom_interfaces
