--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,9 +27,9 @@ jobs:
     # see https://github.com/UBCSailbot/sailbot_workspace/blob/main/.github/workflows/test_definitions.yml
     # for documentation on the inputs and secrets below
     with:
-      repository: local_pathfinding
+      repository: ${{ github.event.repository.name }}
       ros-ci: true
-      clang-tidy: false
+      clang-tidy: true
       rebuild-docs: true
     # If rebuild-docs is true:
     # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
