--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,16 @@
 	},
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
+		"codespaces": {
+			"repositories": {
+				"UBCSailbot/boat_simulator": {"permissions": "write-all"},
+				"UBCSailbot/custom_interfaces": {"permissions": "write-all"},
+				"UBCSailbot/docs": {"permissions": "write-all"},
+				"UBCSailbot/local_pathfinding": {"permissions": "write-all"},
+				"UBCSailbot/network_systems": {"permissions": "write-all"},
+				"UBCSailbot/website": {"permissions": "write-all"}
+			}
+		},
 		"vscode": {
 			"settings": {
 				"terminal.integrated.profiles.linux": {
