--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,8 +2,8 @@ FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:fix-mongodb-tools
 
 # Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
 ARG USERNAME=ros
-ARG HOME=/home/$USERNAME
-COPY config ${HOME}
+ARG HOME=/home/${USERNAME}
+COPY --chown=${USERNAME}:${USERNAME} config ${HOME}
 
 # # Uncomment this section to install additional apt packages
 # ENV DEBIAN_FRONTEND=noninteractive
