Add mypy type checker

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,6 +65,7 @@
 				"ms-python.isort",
 				"ms-python.vscode-pylance",
 				"ms-vsliveshare.vsliveshare",
+				"ms-python.mypy-type-checker",
 				"njpwerner.autodocstring",
 				"streetsidesoftware.code-spell-checker",
 				"vscode-icons-team.vscode-icons",
