--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,6 +54,7 @@
 				"cschlosser.doxdocgen",
 				"DavidAnson.vscode-markdownlint",
 				"eamodio.gitlens",
+				"github.copilot",
 				"github.vscode-github-actions",
 				"Gruntfuggly.todo-tree",
 				"jeff-hykin.better-cpp-syntax",
