Add global launch and configuration files (#154)
* Add main launch file

* Update comment

* Tweak variable naming

* Change comments

* Update mode description

* Use environment variable to construct ROS packages directory

* Format main_launch.py

* Add documentation to functions and remove unnecessary logic

* Undo change to devcontainer config

* Fix typo

* Move main_launch.py to src/global_launch

* Change default mode to simulation

* Remove unnecessary constants

* Add global launch arguments

* Get node pararmeters and arguments working

* Fix get_log_ros_arguments

* Open to all packages

* Update debug launch files

* Overhaul global launch file

* Add default path to python interpreter

* Tweak function names and comments

* Add comment at top explaining file purpose

* Improve global argument descriptions and choices

* Rename simulation mode to development

* Generalize format_global_launch_arguments

* Move global_launch dir outside src

* Add global launch file to debug configuration

* Rework env vars

* Move global_launch dir back to src

* Remove redundant argument passing in global launch file

---------

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ site/*
 
 # vcstool packages
 src/*
+!src/global_launch
 !src/new_project.repos
 
 # configuration files
@@ -15,3 +16,6 @@ src/*
 # clangd
 .cache/*
 compile_commands.json
+
+# python
+*.pyc
